fix: spacing around paragraphs

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,7 +35,7 @@ p {
 .content {
     margin: 2rem 0rem;
     p {
-        margin: 1rem 0rem 2.5rem 0rem;
+        margin: .7rem 0rem 2.5rem 0rem;
     }
 }
 footer {
